<resources>
    <string name="app_name">Notaria_Acevedo</string>
    <string name="text_accounts">Todas las cuentas</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_colegiatura">Ingrese la Colegiatura</string>
    <string name="hint_telefono">Ingrese el telefono</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="error_message_name">Ingrese el nombre completo</string>
    <string name="error_message_email">Ingrese un email valido</string>
    <string name="error_message_age">Ingrese edad</string>
    <string name="error_message_password">Introducir contraseña</string>
    <string name="success_message">Registro exitoso</string>
    <string name="text_not_member">No tienes una cuenta con nosotros? Create uno</string>
    <string name="text_already_member">Ya eres usuario. Inicia Sesion</string>
    <string name="error_email_exists">El email ya existe</string>
    <string name="error_nombre_exists">El nombre ya existe</string>
    <string name="error_password_match">La contraseña no coincide</string>
    <string name="error_valid_email_password">Correo o contraseña equivocada</string>
    <string name="action_settings">Ajustes</string>
    <string name="text_hello">Hola,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="buscar">Buscar</string>
    <string name="fecha_citas">Seleccione fecha</string>
    <string name="cargando">Cargando...</string>
    <string name="debes_seleccionar_un_abogado">Debes seleccionar un Abogado.</string>
    <string name="campo_no_vacio">Este campo no puede estar vacío</string>
    <string name="Fecha">Fecha y hora:</string>
    <string name="Error">Error</string>
    <string name="Lugar">Lugar:</string>
    <string name="Abogado">Nombre Abogado:</string>
    <string name="Sala">Sala:</string>
    <string name="Direccion">Dirección:</string>
    <string name="Telefono">Teléfono:</string>
    <string name="b_calendario">Calendario</string>
    <string name="b_citas">Citas programadas</string>
    <string name="b_dieta">Dieta</string>
    <string name="b_actividadfisica">Actividad Fisica</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_dni">Dni</string>
    <string name="title_activity_kardex">Kardex</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hint_kardex">Kardex</string>
    <string name="hint_Participante">Participante</string>
    <string name="hint_Dni">Dni</string>
    <string name="txtuser">Usuarios</string>
    <string name="txtabogados">Abogados</string>
    <string name="txtexpedientes">Expedientes</string>


</resources>